# initvim2doc

./: .vimspector.json  Cargo.toml  README.md
definitions/: nvim-treesitter.json  vgit.json
src/: main.rs  parser.rs
