[package]
name = "initvimparse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
access-json = "0.1.0"
analisar = "0.2.1"
clap = {version = "3.2.6", features = ["derive"]}
color-eyre = "0.6.1"
regex = "1.5.6"
serde_json = "1.0.82"
shellexpand = "2.1.0"
thiserror = "1.0.31"
