[package]
name = "initvim2doc"
version = "0.1.0"
edition = "2021"

[dependencies]
access-json = "0.1.0"
analisar = "0.2.1"
clap = {version = "3.2.6", features = ["derive"]}
color-eyre = "0.6.1"
regex = "1.5.6"
serde = "1.0.138"
serde_derive = "1.0.138"
serde_json = "1.0.82"
shellexpand = "2.1.0"
thiserror = "1.0.31"
